==> SimoPela/electrical_outlet_IOT/lib/scd40/src/sensirion_i2c_hal.c <==
#include "sensirion_i2c_hal.h"
#include "esp_err.h"
#include "hal/gpio_types.h"
#include "hal/i2c_types.h"
#include "sensirion_common.h"
#include "sensirion_config.h"
#include "driver/i2c.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"


#define I2C_MASTER_TX_BUF_DISABLE 0
#define I2C_MASTER_RX_BUF_DISABLE 0
#define I2C_NO_ACK_CHECK 0
#define I2C_ACK_CHECK 1
#define I2C_ACK_VAL 0
#define I2C_NACK_VAL 1

/**
 * Select the current i2c bus by index.
 * All following i2c operations will be directed at that bus.
 *
 * THE IMPLEMENTATION IS OPTIONAL ON SINGLE-BUS SETUPS (all sensors on the same
 * bus)
 *
 * @param bus_idx   Bus index to select
 * @returns         0 on success, an error code otherwise
 */
int16_t sensirion_i2c_hal_select_bus(uint8_t bus_idx) {
    return NOT_IMPLEMENTED_ERROR;
}

/**
 * Initialize all hard- and software components that are needed for the I2C
 * communication.
 */
int16_t sensirion_i2c_hal_init(int gpio_sda, int gpio_scl) {
    /* TODO: Handle returned esp_err_t*/
    int16_t err = 0;
    i2c_config_t i2c_config = {
        .mode = I2C_MODE_MASTER,
        .sda_io_num = gpio_sda,
        .sda_pullup_en = GPIO_PULLUP_ENABLE,
        .scl_io_num = gpio_scl,
        .scl_pullup_en = GPIO_PULLUP_ENABLE,
        .master.clk_speed = I2C_FREQ
    };
    err = i2c_param_config(I2C_PORT, &i2c_config);
    if(err) return err;
    return i2c_driver_install(I2C_PORT, I2C_MODE_MASTER, I2C_MASTER_RX_BUF_DISABLE, I2C_MASTER_TX_BUF_DISABLE, 0);
}

/**
 * Release all resources initialized by sensirion_i2c_hal_init().
 */
int16_t sensirion_i2c_hal_free(void) {
    return i2c_driver_delete(I2C_PORT);
}

/**
 * Execute one read transaction on the I2C bus, reading a given number of bytes.
 * If the device does not acknowledge the read command, an error shall be
 * returned.
 *
 * @param address 7-bit I2C address to read from
 * @param data    pointer to the buffer where the data is to be stored
 * @param count   number of bytes to read from I2C and store in the buffer
 * @returns 0 on success, error code otherwise
 */
int16_t sensirion_i2c_hal_read(uint8_t address, uint8_t* data, uint16_t count) {
    return i2c_master_read_from_device(I2C_PORT, address, data, count, pdMS_TO_TICKS(1000));
}

/**
 * Execute one write transaction on the I2C bus, sending a given number of
 * bytes. The bytes in the supplied buffer must be sent to the given address. If
 * the slave device does not acknowledge any of the bytes, an error shall be
 * returned.
 *
 * @param address 7-bit I2C address to write to
 * @param data    pointer to the buffer containing the data to write
 * @param count   number of bytes to read from the buffer and send over I2C
 * @returns 0 on success, error code otherwise
 */
int16_t sensirion_i2c_hal_write(uint8_t address, const uint8_t* data, uint16_t count) {
    return i2c_master_write_to_device(I2C_PORT, address, data, count, pdMS_TO_TICKS(1000));
}

/**
 * Sleep for a given number of microseconds. The function should delay the
 * execution for at least the given time, but may also sleep longer.
 *
 * Despite the unit, a <10 millisecond precision is sufficient.
 *
 * @param useconds the sleep time in microseconds
 */
void sensirion_i2c_hal_sleep_usec(uint32_t useconds) {
    /* TODO: Check if this actually works */
    uint32_t msec = useconds / 1000;
    if (useconds % 1000 > 0) {
        msec++;
    }
    vTaskDelay(pdMS_TO_TICKS(msec));
}
